--- a/OrderManagement.Infrastructure/OrderManagement.Infrastructure.csproj
+++ b/OrderManagement.Infrastructure/OrderManagement.Infrastructure.csproj
@@ -11,10 +11,17 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.21" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OrderManagement.Application\OrderManagement.Application.csproj" />
     <ProjectReference Include="..\OrderManagement.Domain\OrderManagement.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Email\" />
+    <Folder Include="Logging\" />
   </ItemGroup>
 
 </Project>
