add consumer service and email service

--- a/OrderManagement.API/appsettings.json
+++ b/OrderManagement.API/appsettings.json
@@ -1,9 +1,43 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-2EHTON8\\SQLEXPRESS;Database=comunidadandina_db;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": 5672,
+    "Username": "guest",
+    "Password": "guest"
+  },
+
+  "Email": {
+    "SmtpHost": "localhost",
+    "SmtpPort": 1025,
+    "FromEmail": "noreply@ordermanagement.local",
+    "FromName": "Order Management System"
+  },
+
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "OrderManagement.API"
     }
   },
+
   "AllowedHosts": "*"
 }
