--- a/OrderManagement.Infrastructure/OrderManagement.Infrastructure.csproj
+++ b/OrderManagement.Infrastructure/OrderManagement.Infrastructure.csproj
@@ -11,7 +11,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.21" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,7 +22,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Email\" />
     <Folder Include="Logging\" />
   </ItemGroup>
 
