--- a/OrderManagement.API/appsettings.json
+++ b/OrderManagement.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-2EHTON8\\SQLEXPRESS;Database=comunidadandina_db;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=comunidadandina_db;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
   "RabbitMQ": {
