--- a/OrderManagement.Infrastructure/OrderManagement.Infrastructure.csproj
+++ b/OrderManagement.Infrastructure/OrderManagement.Infrastructure.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.21" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.21">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
@@ -23,6 +27,12 @@
 
   <ItemGroup>
     <Folder Include="Logging\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Email\EmailTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
