configure docker file y composer

--- a/OrderManagement.API/appsettings.json
+++ b/OrderManagement.API/appsettings.json
@@ -1,17 +1,17 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=comunidadandina_db;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Default": "Server=sqlserver;Database=OrderManagementDb;User=sa;Password=YourPassword123!;TrustServerCertificate=True;"
   },
 
   "RabbitMQ": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Port": 5672,
     "Username": "guest",
     "Password": "guest"
   },
 
   "Email": {
-    "SmtpHost": "localhost",
+    "SmtpHost": "mailhog",
     "SmtpPort": 1025,
     "FromEmail": "noreply@ordermanagement.local",
     "FromName": "Order Management System"
